Improving scripts