@@ -52,8 +52,9 @@ your-project/
 ```bash
 #!/bin/bash
 
-# Java Application Runner with Async-Profiler Support
+# Java Application Runner with Async-Profiler Support (Java 21-25 Enhanced)
 # This script runs Spring Boot or Quarkus applications with JVM flags optimized for async-profiler
+# Enhanced for Java 21-25 with virtual threads, modern GC, and improved profiling support
 
 set -e
 
@@ -64,8 +65,11 @@ APP_CLASS="info.jab.ms.MainApplication"
 HEAP_SIZE="512m"
 PROFILE_NAME="default"
 FRAMEWORK="auto"
-ENABLE_JFR="false"
 ENABLE_GC_LOG="false"
+ENABLE_VIRTUAL_THREADS="false"
+JAVA_VERSION=""
+GC_ALGORITHM="auto"
+ENABLE_PREVIEW_FEATURES="false"
 
 # Colors for output
 RED='\033[0;31m'
@@ -107,8 +111,10 @@ OPTIONS:
     -p, --profile PROFILE   Profile to activate (default: default)
                            For Spring Boot: sets spring.profiles.active
                            For Quarkus: sets quarkus.profile
-    --jfr                   Enable Java Flight Recorder (disabled by default)
     --gc-log                Enable GC logging (disabled by default)
+    --virtual-threads       Enable virtual threads (Java 21+, disabled by default)
+    --gc GC_TYPE           GC algorithm: auto, g1, zgc, parallel, serial (default: auto)
+    --preview               Enable preview features for newer Java versions
     --help                  Show this help message
 
 FRAMEWORK DETECTION:
@@ -126,20 +132,23 @@ EXAMPLES:
     # Force Quarkus with custom heap size and profile
     $0 -f quarkus -h 1g -p dev
 
-    # Run Spring Boot with virtual threads profile
-    $0 -f springboot -p vt
+    # Run Spring Boot with virtual threads (Java 21+)
+    $0 -f springboot --virtual-threads
 
-    # Run Spring Boot with development profile
-    $0 -f springboot -p dev
+    # Run with ZGC for low-latency applications (Java 21+)
+    $0 -f springboot --gc zgc -h 2g
 
-    # Run with wall-clock profiling
-    $0 -m wall
+    # Run with preview features enabled (Java 21+)
+    $0 -f springboot --preview
 
-    # Run with JFR enabled for detailed profiling
-    $0 -m cpu --jfr
+    # Run with wall-clock profiling and virtual threads
+    $0 -m wall --virtual-threads
 
-    # Run with both JFR and GC logging enabled
-    $0 -m alloc --jfr --gc-log
+    # Run with comprehensive GC logging
+    $0 -m cpu --gc-log
+
+    # Run with modern GC, virtual threads, and comprehensive logging
+    $0 -m alloc --gc-log --virtual-threads --gc g1
 
 EOF
 }
@@ -171,12 +180,20 @@ while [[ $# -gt 0 ]]; do
             PROFILE_NAME="$2"
             shift 2
             ;;
-        --jfr)
-            ENABLE_JFR="true"
-            shift
-            ;;
         --gc-log)
             ENABLE_GC_LOG="true"
+            shift
+            ;;
+        --virtual-threads)
+            ENABLE_VIRTUAL_THREADS="true"
+            shift
+            ;;
+        --gc)
+            GC_ALGORITHM="$2"
+            shift 2
+            ;;
+        --preview)
+            ENABLE_PREVIEW_FEATURES="true"
             shift
             ;;
         --help)
@@ -207,6 +224,16 @@ case $FRAMEWORK in
         ;;
     *)
         log_error "Invalid framework: $FRAMEWORK. Use: auto, springboot, quarkus"
+        exit 1
+        ;;
+esac
+
+# Validate GC algorithm
+case $GC_ALGORITHM in
+    auto|g1|zgc|parallel|serial)
+        ;;
+    *)
+        log_error "Invalid GC algorithm: $GC_ALGORITHM. Use: auto, g1, zgc, parallel, serial"
         exit 1
         ;;
 esac
@@ -286,8 +313,54 @@ set_default_jar() {
     fi
 }
 
-# Detect framework and set defaults
+# Function to detect Java version
+detect_java_version() {
+    if command -v java >/dev/null 2>&1; then
+        JAVA_VERSION=$(java -version 2>&1 | head -n 1 | cut -d'"' -f2 | cut -d'.' -f1)
+        if [[ "$JAVA_VERSION" == "1" ]]; then
+            # Handle Java 8 version format (1.8.x)
+            JAVA_VERSION=$(java -version 2>&1 | head -n 1 | cut -d'"' -f2 | cut -d'.' -f2)
+        fi
+        log_info "Detected Java version: $JAVA_VERSION"
+
+        # Validate virtual threads support
+        if [[ "$ENABLE_VIRTUAL_THREADS" == "true" ]] && [[ "$JAVA_VERSION" -lt 21 ]]; then
+            log_warn "Virtual threads require Java 21+. Current version: $JAVA_VERSION. Disabling virtual threads."
+            ENABLE_VIRTUAL_THREADS="false"
+        fi
+
+        # Validate preview features
+        if [[ "$ENABLE_PREVIEW_FEATURES" == "true" ]] && [[ "$JAVA_VERSION" -lt 21 ]]; then
+            log_warn "Preview features flag requires Java 21+. Current version: $JAVA_VERSION. Disabling preview features."
+            ENABLE_PREVIEW_FEATURES="false"
+        fi
+    else
+        log_error "Java not found in PATH"
+        exit 1
+    fi
+}
+
+# Function to select optimal GC algorithm based on Java version
+select_gc_algorithm() {
+    if [[ "$GC_ALGORITHM" == "auto" ]]; then
+        if [[ "$JAVA_VERSION" -ge 21 ]]; then
+            # For Java 21+, prefer G1GC for balanced performance
+            GC_ALGORITHM="g1"
+            log_info "Auto-selected G1GC for Java $JAVA_VERSION"
+        elif [[ "$JAVA_VERSION" -ge 17 ]]; then
+            GC_ALGORITHM="g1"
+            log_info "Auto-selected G1GC for Java $JAVA_VERSION"
+        else
+            GC_ALGORITHM="parallel"
+            log_info "Auto-selected Parallel GC for Java $JAVA_VERSION"
+        fi
+    fi
+}
+
+# Detect framework, Java version, and set defaults
 detect_framework
+detect_java_version
+select_gc_algorithm
 set_default_jar
 
 # Generate timestamp for output files
@@ -297,8 +370,10 @@ log_info "Starting $FRAMEWORK application"
 log_info "Profile mode: $PROFILE_MODE"
 log_info "Framework: $FRAMEWORK"
 log_info "Profile: $PROFILE_NAME"
+log_info "Java version: $JAVA_VERSION"
+log_info "GC algorithm: $GC_ALGORITHM"
 
-# JVM flags for optimal profiling with async-profiler
+# JVM flags for optimal profiling with async-profiler (Java 21-25 enhanced)
 JVM_FLAGS=(
     # Memory settings
     "-Xms$HEAP_SIZE"
@@ -311,29 +386,120 @@ JVM_FLAGS=(
 
     # Security settings for profiler attachment
     "-Djdk.attach.allowAttachSelf=true"
-
-    # Optional: Disable C2 compiler for more accurate profiling (uncomment if needed)
-    # "-XX:TieredStopAtLevel=1"
 )
 
-# Add JFR settings if enabled
-if [[ "$ENABLE_JFR" == "true" ]]; then
+# Add GC-specific flags
+case $GC_ALGORITHM in
+    g1)
+        JVM_FLAGS+=(
+            "-XX:+UseG1GC"
+            "-XX:MaxGCPauseMillis=200"
+            "-XX:G1HeapRegionSize=16m"
+        )
+        if [[ "$JAVA_VERSION" -ge 21 ]]; then
+            JVM_FLAGS+=(
+                "-XX:G1MixedGCCountTarget=8"
+                "-XX:G1HeapWastePercent=10"
+            )
+        fi
+        ;;
+    zgc)
+        if [[ "$JAVA_VERSION" -ge 21 ]]; then
+            JVM_FLAGS+=(
+                "-XX:+UseZGC"
+            )
+        elif [[ "$JAVA_VERSION" -ge 17 ]]; then
+            JVM_FLAGS+=(
+                "-XX:+UseZGC"
+                "-XX:+UnlockExperimentalVMOptions"
+            )
+        else
+            log_warn "ZGC requires Java 17+. Falling back to G1GC"
+            JVM_FLAGS+=(
+                "-XX:+UseG1GC"
+                "-XX:MaxGCPauseMillis=200"
+            )
+        fi
+        ;;
+    parallel)
+        JVM_FLAGS+=(
+            "-XX:+UseParallelGC"
+        )
+        ;;
+    serial)
+        JVM_FLAGS+=(
+            "-XX:+UseSerialGC"
+        )
+        ;;
+esac
+
+# Add Java version-specific optimizations
+if [[ "$JAVA_VERSION" -ge 21 ]]; then
     JVM_FLAGS+=(
-        "-XX:+FlightRecorder"
-        "-XX:StartFlightRecording=filename=flight-recording-${TIMESTAMP}.jfr"
+        # Enhanced performance flags for Java 21+
+        "-XX:+UseStringDeduplication"
     )
-    log_info "JFR enabled: flight-recording-${TIMESTAMP}.jfr"
 fi
 
-# Add GC logging if enabled
-if [[ "$ENABLE_GC_LOG" == "true" ]]; then
+# Function to get CPU core count (cross-platform)
+get_cpu_cores() {
+    if command -v nproc >/dev/null 2>&1; then
+        # Linux
+        nproc
+    elif [[ -f /proc/cpuinfo ]]; then
+        # Linux fallback
+        grep -c ^processor /proc/cpuinfo
+    elif command -v sysctl >/dev/null 2>&1; then
+        # macOS
+        sysctl -n hw.ncpu
+    else
+        # Default fallback
+        echo "4"
+    fi
+}
+
+# Add virtual threads support (Java 21+)
+if [[ "$ENABLE_VIRTUAL_THREADS" == "true" ]]; then
+    CPU_CORES=$(get_cpu_cores)
     JVM_FLAGS+=(
-        "-Xlog:gc*:gc-${TIMESTAMP}.log:time,tags"
+        "-Djdk.virtualThreadScheduler.parallelism=$CPU_CORES"
+        "-Djdk.virtualThreadScheduler.maxPoolSize=$((CPU_CORES * 256))"
     )
+    log_info "Virtual threads enabled with optimized scheduler settings (CPU cores: $CPU_CORES)"
+fi
+
+# Add preview features if enabled
+if [[ "$ENABLE_PREVIEW_FEATURES" == "true" ]]; then
+    JVM_FLAGS+=(
+        "--enable-preview"
+    )
+    log_info "Preview features enabled"
+fi
+
+# Add GC logging if enabled (enhanced for Java 21-25)
+if [[ "$ENABLE_GC_LOG" == "true" ]]; then
+    if [[ "$JAVA_VERSION" -ge 21 ]]; then
+        JVM_FLAGS+=(
+            "-Xlog:gc*,heap*,ergo*:gc-${TIMESTAMP}.log:time,tags,level"
+            "-Xlog:gc+heap=info"
+        )
+    elif [[ "$JAVA_VERSION" -ge 11 ]]; then
+        JVM_FLAGS+=(
+            "-Xlog:gc*:gc-${TIMESTAMP}.log:time,tags"
+        )
+    else
+        # Legacy GC logging for Java 8
+        JVM_FLAGS+=(
+            "-XX:+PrintGC"
+            "-XX:+PrintGCDetails"
+            "-XX:+PrintGCTimeStamps"
+            "-Xloggc:gc-${TIMESTAMP}.log"
+        )
+    fi
     log_info "GC logging enabled: gc-${TIMESTAMP}.log"
 fi
 
-# Framework-specific arguments
+# Framework-specific arguments (enhanced for Java 21-25)
 get_app_args() {
     case $FRAMEWORK in
         springboot)
@@ -342,6 +508,14 @@ get_app_args() {
                 "--logging.level.info.jab.ms=DEBUG"
                 "--server.port=8080"
             )
+
+            # Add virtual threads support for Spring Boot 3.2+ with Java 21+
+            if [[ "$ENABLE_VIRTUAL_THREADS" == "true" ]] && [[ "$JAVA_VERSION" -ge 21 ]]; then
+                APP_ARGS+=(
+                    "--spring.threads.virtual.enabled=true"
+                )
+                log_info "Spring Boot virtual threads enabled"
+            fi
             ;;
         quarkus)
             APP_ARGS=(
@@ -349,6 +523,14 @@ get_app_args() {
                 "-Dquarkus.log.category.\"info.jab.ms\".level=DEBUG"
                 "-Dquarkus.http.port=8080"
             )
+
+            # Add virtual threads support for Quarkus with Java 21+
+            if [[ "$ENABLE_VIRTUAL_THREADS" == "true" ]] && [[ "$JAVA_VERSION" -ge 21 ]]; then
+                APP_ARGS+=(
+                    "-Dquarkus.virtual-threads.enabled=true"
+                )
+                log_info "Quarkus virtual threads enabled"
+            fi
             ;;
     esac
 }
@@ -428,6 +610,15 @@ fi
 
 log_success "Application completed!"
 
+# Enhanced Java 21-25 Features Summary:
+# - Automatic Java version detection with compatibility warnings
+# - Virtual threads support (Java 21+) with optimized scheduler settings
+# - Modern GC algorithms (G1GC, ZGC) with version-specific optimizations
+# - Enhanced GC logging with detailed heap and ergonomics information
+# - Preview features support for experimental Java features
+# - Framework-specific virtual threads integration (Spring Boot 3.2+, Quarkus)
+# - Backward compatibility maintained for Java 8+ versions
+
 ```
 
 **Script Location:**
@@ -480,7 +671,7 @@ YELLOW='\033[1;33m'
 BLUE='\033[0;34m'
 NC='\033[0m' # No Color
 
-echo -e "${GREEN}Java Application Profiler v4.1 - Interactive Mode${NC}"
+echo -e "${GREEN}Java Application Profiler v4.4 - Organized by Tool Categories${NC}"
 echo "================================================="
 
 # Step 0: Problem Identification
@@ -795,61 +986,73 @@ show_profiling_menu() {
     case $SUGGESTED_PROFILE in
         "Memory")
             echo -e "${GREEN}*** RECOMMENDED FOR MEMORY LEAK DETECTION ***${NC}"
-            echo "2. Memory Allocation Profiling (30s) ⭐"
-            echo "10. Memory Leak Detection (5min) - Enhanced in v4.1 ⭐"
-            echo "6. Native Memory Profiling (30s) - NEW: Full macOS support ⭐"
-            echo "15. All Events Profiling (30s) - NEW comprehensive analysis ⭐"
+            echo "2. Memory Allocation Profiling (30s) [Async-Profiler] ⭐"
+            echo "8. Memory Leak Detection (5min) [Async-Profiler] ⭐"
+            echo "5. Native Memory Profiling (30s) [Async-Profiler] ⭐"
+            echo "12. All Events Profiling (30s) [Async-Profiler] ⭐"
             echo ""
             echo -e "${BLUE}Other Options:${NC}"
             ;;
         "CPU")
             echo -e "${GREEN}*** RECOMMENDED FOR YOUR PROBLEM ***${NC}"
-            echo "1. CPU Profiling (30s) ⭐"
-            echo "8. Custom Duration CPU Profiling ⭐"
-            echo "15. All Events Profiling (30s) - NEW comprehensive analysis ⭐"
+            echo "1. CPU Profiling (30s) [Async-Profiler] ⭐"
+            echo "7. Custom Duration CPU Profiling [Async-Profiler] ⭐"
+            echo "12. All Events Profiling (30s) [Async-Profiler] ⭐"
             echo ""
             echo -e "${BLUE}Other Options:${NC}"
             ;;
         "Lock/Threading")
             echo -e "${GREEN}*** RECOMMENDED FOR YOUR PROBLEM ***${NC}"
-            echo "3. Lock Contention Profiling (30s) ⭐"
-            echo "4. Wall Clock Profiling (30s) ⭐"
+            echo "3. Lock Contention Profiling (30s) [Async-Profiler] ⭐"
+            echo "4. Wall Clock Profiling (30s) [Async-Profiler] ⭐"
             echo ""
             echo -e "${BLUE}Other Options:${NC}"
             ;;
         "GC Analysis")
             echo -e "${GREEN}*** RECOMMENDED FOR YOUR PROBLEM ***${NC}"
-            echo "14. Garbage Collection Log (custom duration) ⭐"
-            echo "5. Interactive Heatmap (60s) ⭐"
-            echo "2. Memory Allocation Profiling (30s) ⭐"
+            echo "13. Garbage Collection Log (custom duration) [jcmd/jstat] ⭐"
+            echo "5. Interactive Heatmap (60s) [Async-Profiler + JFRconv] ⭐"
+            echo "2. Memory Allocation Profiling (30s) [Async-Profiler] ⭐"
             echo ""
             echo -e "${BLUE}Other Options:${NC}"
             ;;
         "I/O Analysis")
             echo -e "${GREEN}*** RECOMMENDED FOR YOUR PROBLEM ***${NC}"
-            echo "4. Wall Clock Profiling (30s) ⭐"
-            echo "5. Interactive Heatmap (60s) ⭐"
+            echo "4. Wall Clock Profiling (30s) [Async-Profiler] ⭐"
+            echo "5. Interactive Heatmap (60s) [Async-Profiler + JFRconv] ⭐"
             echo ""
             echo -e "${BLUE}Other Options:${NC}"
             ;;
     esac
 
-    echo "1. CPU Profiling (30s)"
-    echo "2. Memory Allocation Profiling (30s)"
-    echo "3. Lock Contention Profiling (30s)"
-    echo "4. Wall Clock Profiling (30s)"
-    echo "5. Interactive Heatmap (60s) - NEW in v4.0"
-    echo "6. Native Memory Profiling (30s) - NEW: Full macOS support in v4.1"
-    echo "7. Inverted Flame Graph (30s) - NEW in v4.0"
-    echo "8. Custom Duration CPU Profiling"
-    echo "9. View recent results"
-    echo "10. Memory Leak Detection (5min) - Enhanced in v4.1"
-    echo "11. Complete Memory Analysis Workflow"
-    echo "12. JFR Recording (custom duration)"
-    echo "13. Thread Dump (instant snapshot)"
-    echo "14. Garbage Collection Log (custom duration)"
-    echo "15. All Events Profiling (30s) - NEW in v4.1"
-    echo "16. OpenTelemetry OTLP Export - NEW in v4.1"
+    echo ""
+    echo -e "${GREEN}=== ASYNC-PROFILER OPTIONS ===${NC}"
+    echo "1. CPU Profiling (30s) [Async-Profiler]"
+    echo "2. Memory Allocation Profiling (30s) [Async-Profiler]"
+    echo "3. Lock Contention Profiling (30s) [Async-Profiler]"
+    echo "4. Wall Clock Profiling (30s) [Async-Profiler]"
+    echo "5. Native Memory Profiling (30s) [Async-Profiler] - NEW: Full macOS support in v4.1"
+    echo "6. Inverted Flame Graph (30s) [Async-Profiler] - NEW in v4.0"
+    echo "7. Custom Duration CPU Profiling [Async-Profiler]"
+    echo "8. Memory Leak Detection (5min) [Async-Profiler] - Enhanced in v4.1"
+    echo "9. Complete Memory Analysis Workflow [Async-Profiler]"
+    echo "10. JFR Recording (custom duration) [Async-Profiler]"
+    echo "11. Interactive Heatmap (60s) [Async-Profiler + JFRconv] - NEW in v4.0"
+    echo "12. All Events Profiling (30s) [Async-Profiler] - NEW in v4.1"
+    echo "13. OpenTelemetry OTLP Export [Async-Profiler] - NEW in v4.1"
+    echo ""
+    echo -e "${BLUE}=== JCMD OPTIONS ===${NC}"
+    echo "14. Enhanced JFR Memory Profiling (Java 21+) [jcmd] - NEW"
+    echo "15. Java 25 CPU-Time Profiling (Linux only) [jcmd] - NEW"
+    echo "16. Java 25 Method Tracing [jcmd] - NEW"
+    echo "17. Advanced JFR with Custom Events [jcmd] - NEW"
+    echo "18. JFR Memory Leak Analysis with TLAB tracking [jcmd] - NEW"
+    echo "19. Garbage Collection Log (custom duration) [jcmd/jstat]"
+    echo ""
+    echo -e "${YELLOW}=== SYSTEM TOOLS ===${NC}"
+    echo "20. Thread Dump (instant snapshot) [jstack/Async-Profiler]"
+    echo "21. View recent results [Built-in File Explorer]"
+    echo "22. Kill current process [kill command] - NEW"
     echo "0. Exit profiler"
     echo -e "${BLUE}===========================================${NC}"
 }
@@ -881,9 +1084,37 @@ handle_profiling_error() {
     return 0
 }
 
+# Function to detect Java version
+detect_java_version() {
+    local pid=$1
+    local java_version
+
+    # Try to get Java version from the running process
+    if command -v jcmd >/dev/null 2>&1; then
+        java_version=$(jcmd "$pid" VM.version 2>/dev/null | grep -E "Java|OpenJDK" | head -1)
+        if [[ "$java_version" =~ ([0-9]+) ]]; then
+            echo "${BASH_REMATCH[1]}"
+            return 0
+        fi
+    fi
+
+    # Fallback: try to detect from process command line
+    if command -v ps >/dev/null 2>&1; then
+        local java_cmd=$(ps -p "$pid" -o args= 2>/dev/null | head -1)
+        if [[ "$java_cmd" =~ java.*/([0-9]+) ]]; then
+            echo "${BASH_REMATCH[1]}"
+            return 0
+        fi
+    fi
+
+    # Default assumption for modern systems
+    echo "17"
+}
+
 # Function to execute profiling
 execute_profiling() {
     local option=$1
+    local java_version=$(detect_java_version "$PID")
 
     case $option in
         1)
@@ -911,20 +1142,6 @@ execute_profiling() {
             "$PROFILER_DIR/current/bin/asprof" -e wall -d 30 -f "$RESULTS_DIR/wall-flamegraph-$(date +%Y%m%d-%H%M%S).html" "$PID"
             ;;
         5)
-            echo -e "${GREEN}Starting interactive heatmap profiling for 60 seconds...${NC}"
-            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
-            JFR_FILE="$RESULTS_DIR/profile-$TIMESTAMP.jfr"
-            HEATMAP_FILE="$RESULTS_DIR/heatmap-cpu-$TIMESTAMP.html"
-
-            echo -e "${BLUE}Step 1: Generating JFR recording...${NC}"
-            "$PROFILER_DIR/current/bin/asprof" -d 60 -o jfr -f "$JFR_FILE" "$PID"
-
-            echo -e "${BLUE}Step 2: Converting JFR to heatmap...${NC}"
-            # jfrconv is now a shell script in v4.1
-            bash "$PROFILER_DIR/current/bin/jfrconv" --cpu -o heatmap "$JFR_FILE" "$HEATMAP_FILE"
-            echo -e "${GREEN}Heatmap generated: $HEATMAP_FILE${NC}"
-            ;;
-        6)
             echo -e "${GREEN}Starting native memory profiling for 30 seconds...${NC}"
             if [[ "$OSTYPE" == "darwin"* ]]; then
                 echo -e "${BLUE}Using native memory profiling with full macOS support (v4.1)...${NC}"
@@ -934,11 +1151,11 @@ execute_profiling() {
                 "$PROFILER_DIR/current/bin/asprof" -e nativemem -d 30 -f "$RESULTS_DIR/native-memory-$(date +%Y%m%d-%H%M%S).html" "$PID"
             fi
             ;;
-        7)
+        6)
             echo -e "${GREEN}Starting inverted flame graph profiling for 30 seconds...${NC}"
             "$PROFILER_DIR/current/bin/asprof" -d 30 --inverted -f "$RESULTS_DIR/inverted-flamegraph-$(date +%Y%m%d-%H%M%S).html" "$PID"
             ;;
-        8)
+        7)
             read -p "Enter duration in seconds: " DURATION
             echo -e "${GREEN}Starting CPU profiling for $DURATION seconds...${NC}"
             # On macOS, add --all-user flag to avoid kernel profiling issues
@@ -948,33 +1165,13 @@ execute_profiling() {
                 "$PROFILER_DIR/current/bin/asprof" -d "$DURATION" -f "$RESULTS_DIR/cpu-flamegraph-$(date +%Y%m%d-%H%M%S).html" "$PID"
             fi
             ;;
-                9)
-            echo -e "${YELLOW}Recent profiling results in $RESULTS_DIR:${NC}"
-            ls -lat "$RESULTS_DIR"/*.html "$RESULTS_DIR"/*.jfr "$RESULTS_DIR"/*.txt "$RESULTS_DIR"/*.log "$RESULTS_DIR"/*.json 2>/dev/null | head -10 || echo "No profiling files found"
-
-            # Show breakdown by file type
-            echo ""
-            echo -e "${BLUE}File types:${NC}"
-            HTML_COUNT=$(ls "$RESULTS_DIR"/*.html 2>/dev/null | wc -l | xargs)
-            JFR_COUNT=$(ls "$RESULTS_DIR"/*.jfr 2>/dev/null | wc -l | xargs)
-            TXT_COUNT=$(ls "$RESULTS_DIR"/*.txt 2>/dev/null | wc -l | xargs)
-            LOG_COUNT=$(ls "$RESULTS_DIR"/*.log 2>/dev/null | wc -l | xargs)
-            JSON_COUNT=$(ls "$RESULTS_DIR"/*.json 2>/dev/null | wc -l | xargs)
-
-            echo "  HTML files (flame graphs): $HTML_COUNT"
-            echo "  JFR files (recordings): $JFR_COUNT"
-            echo "  TXT files (thread dumps): $TXT_COUNT"
-            echo "  LOG files (GC logs): $LOG_COUNT"
-            echo "  JSON files (OTLP exports): $JSON_COUNT"
-            return
-            ;;
-        10)
+        8)
             echo -e "${GREEN}Starting Memory Leak Detection (5 minutes)...${NC}"
             echo -e "${YELLOW}This will run for 5 minutes to capture memory leak patterns${NC}"
             echo -e "${BLUE}Using enhanced leak detection: focusing on allocation patterns over time${NC}"
             "$PROFILER_DIR/current/bin/asprof" -e alloc -d 300 --alloc 1m -f "$RESULTS_DIR/memory-leak-$(date +%Y%m%d-%H%M%S).html" "$PID"
             ;;
-        11)
+        9)
             echo -e "${GREEN}Starting Complete Memory Analysis Workflow...${NC}"
             TIMESTAMP=$(date +%Y%m%d-%H%M%S)
 
@@ -992,7 +1189,7 @@ execute_profiling() {
             echo "- heap-analysis-$TIMESTAMP.html (60s detailed heap)"
             echo "- memory-leak-complete-$TIMESTAMP.html (5min leak detection)"
             ;;
-        12)
+        10)
             echo -e "${GREEN}Creating JFR Recording...${NC}"
             read -p "Enter duration in seconds (default: 60): " JFR_DURATION
             JFR_DURATION=${JFR_DURATION:-60}
@@ -1020,49 +1217,341 @@ execute_profiling() {
                 echo -e "${RED}JFR recording failed${NC}"
             fi
             ;;
-        13)
-            echo -e "${GREEN}Creating Thread Dump...${NC}"
+        11)
+            echo -e "${GREEN}Starting interactive heatmap profiling for 60 seconds...${NC}"
             TIMESTAMP=$(date +%Y%m%d-%H%M%S)
-            THREAD_DUMP_FILE="$RESULTS_DIR/threaddump-$TIMESTAMP.txt"
+            JFR_FILE="$RESULTS_DIR/profile-$TIMESTAMP.jfr"
+            HEATMAP_FILE="$RESULTS_DIR/heatmap-cpu-$TIMESTAMP.html"
 
-            # Try jstack first (if available), then fall back to async-profiler
-            if command -v jstack >/dev/null 2>&1; then
-                echo -e "${BLUE}Using jstack to generate thread dump...${NC}"
-                jstack "$PID" > "$THREAD_DUMP_FILE" 2>&1
-                JSTACK_EXIT_CODE=$?
+            echo -e "${BLUE}Step 1: Generating JFR recording...${NC}"
+            "$PROFILER_DIR/current/bin/asprof" -d 60 -o jfr -f "$JFR_FILE" "$PID"
 
-                if [ $JSTACK_EXIT_CODE -eq 0 ] && [ -s "$THREAD_DUMP_FILE" ]; then
-                    echo -e "${GREEN}Thread dump completed: $THREAD_DUMP_FILE${NC}"
+            echo -e "${BLUE}Step 2: Converting JFR to heatmap...${NC}"
+            # jfrconv is now a shell script in v4.1
+            bash "$PROFILER_DIR/current/bin/jfrconv" --cpu -o heatmap "$JFR_FILE" "$HEATMAP_FILE"
+            echo -e "${GREEN}Heatmap generated: $HEATMAP_FILE${NC}"
+            ;;
+        12)
+            echo -e "${GREEN}Starting All Events Profiling for 30 seconds...${NC}"
+            echo -e "${BLUE}This will collect all possible events simultaneously (CPU, alloc, lock, wall)${NC}"
+            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+            JFR_FILE="$RESULTS_DIR/all-events-$TIMESTAMP.jfr"
+            HTML_FILE="$RESULTS_DIR/all-events-$TIMESTAMP.html"
+
+            echo -e "${BLUE}Step 1: Recording all events to JFR format...${NC}"
+            "$PROFILER_DIR/current/bin/asprof" --all -d 30 -o jfr -f "$JFR_FILE" "$PID"
+
+            if [ $? -eq 0 ] && [ -f "$JFR_FILE" ]; then
+                echo -e "${BLUE}Step 2: Converting JFR to HTML flame graph...${NC}"
+                # Use the converter tool to create flame graph from JFR
+                if [ -f "$PROFILER_DIR/current/bin/converter.jar" ]; then
+                    java -jar "$PROFILER_DIR/current/bin/converter.jar" jfr2flame "$JFR_FILE" "$HTML_FILE"
+                elif [ -f "$PROFILER_DIR/current/bin/jfrconv" ]; then
+                    bash "$PROFILER_DIR/current/bin/jfrconv" -o html "$JFR_FILE" "$HTML_FILE"
                 else
-                    echo -e "${YELLOW}jstack failed, trying async-profiler...${NC}"
-                    "$PROFILER_DIR/current/bin/asprof" -d 1 -e cpu -o text -f "$THREAD_DUMP_FILE" "$PID" >/dev/null 2>&1
-                    if [ $? -eq 0 ]; then
-                        echo -e "${GREEN}Thread dump completed: $THREAD_DUMP_FILE${NC}"
-                    else
-                        echo -e "${RED}Thread dump failed with both methods${NC}"
-                        rm -f "$THREAD_DUMP_FILE"
-                    fi
+                    echo -e "${YELLOW}JFR converter not found, skipping HTML conversion${NC}"
+                    echo -e "${BLUE}You can analyze the JFR file with JProfiler, VisualVM, or Mission Control${NC}"
+                fi
+
+                echo -e "${GREEN}All events profiling completed!${NC}"
+                echo -e "${YELLOW}Generated files:${NC}"
+                echo "  - JFR recording: $JFR_FILE"
+                if [ -f "$HTML_FILE" ]; then
+                    echo "  - HTML flame graph: $HTML_FILE"
+                else
+                    echo "  - HTML conversion skipped (use JFR analysis tools instead)"
                 fi
             else
-                echo -e "${BLUE}jstack not available, using async-profiler...${NC}"
-                # Use async-profiler to get thread information
-                "$PROFILER_DIR/current/bin/asprof" -d 1 -e cpu -o text -f "$THREAD_DUMP_FILE" "$PID" >/dev/null 2>&1
-                if [ $? -eq 0 ]; then
-                    echo -e "${GREEN}Thread dump completed: $THREAD_DUMP_FILE${NC}"
-                else
-                    echo -e "${RED}Thread dump failed${NC}"
-                    rm -f "$THREAD_DUMP_FILE"
-                fi
+                echo -e "${RED}All events profiling failed${NC}"
+            fi
+            ;;
+        13)
+            echo -e "${GREEN}Starting OpenTelemetry OTLP Export...${NC}"
+            read -p "Enter duration in seconds (default: 60): " OTLP_DURATION
+            OTLP_DURATION=${OTLP_DURATION:-60}
+
+            if ! [[ "$OTLP_DURATION" =~ ^[0-9]+$ ]] || [ "$OTLP_DURATION" -lt 1 ]; then
+                echo -e "${RED}Invalid duration. Using default 60 seconds.${NC}"
+                OTLP_DURATION=60
             fi
 
-                         if [ -f "$THREAD_DUMP_FILE" ]; then
-                 echo -e "${YELLOW}Thread dump summary:${NC}"
-                 echo "  File: $THREAD_DUMP_FILE"
-                 echo "  Size: $(wc -l < "$THREAD_DUMP_FILE") lines"
-                 echo -e "${BLUE}Use 'cat $THREAD_DUMP_FILE' to view the complete thread dump${NC}"
-             fi
-             ;;
+            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+            OTLP_FILE="$RESULTS_DIR/otlp-export-$TIMESTAMP.json"
+
+            echo -e "${BLUE}Generating OTLP format for OpenTelemetry integration...${NC}"
+            "$PROFILER_DIR/current/bin/asprof" -d "$OTLP_DURATION" -o otlp -f "$OTLP_FILE" "$PID"
+
+            if [ $? -eq 0 ]; then
+                echo -e "${GREEN}OTLP export completed: $OTLP_FILE${NC}"
+                echo -e "${YELLOW}This file can be imported into OpenTelemetry-compatible systems${NC}"
+                echo -e "${BLUE}File size: $(wc -c < "$OTLP_FILE" 2>/dev/null || echo "unknown") bytes${NC}"
+            else
+                echo -e "${RED}OTLP export failed${NC}"
+            fi
+            ;;
         14)
+            echo -e "${GREEN}Starting Enhanced JFR Memory Profiling (Java 21+)...${NC}"
+            if [ "$java_version" -lt 21 ]; then
+                echo -e "${YELLOW}Warning: This feature requires Java 21+. Current version: $java_version${NC}"
+                echo -e "${BLUE}Falling back to standard memory profiling...${NC}"
+                "$PROFILER_DIR/current/bin/asprof" -e alloc -d 60 -f "$RESULTS_DIR/memory-fallback-$(date +%Y%m%d-%H%M%S).html" "$PID"
+                return
+            fi
+
+            read -p "Enter duration in seconds (default: 120): " MEMORY_DURATION
+            MEMORY_DURATION=${MEMORY_DURATION:-120}
+
+            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+            JFR_FILE="$RESULTS_DIR/enhanced-memory-$TIMESTAMP.jfr"
+
+            echo -e "${BLUE}Starting enhanced JFR memory profiling with modern events...${NC}"
+
+            # Use jcmd for more precise control over JFR events
+            echo -e "${BLUE}Step 1: Starting JFR recording with memory-specific events...${NC}"
+            jcmd "$PID" JFR.start name=memory-analysis duration="${MEMORY_DURATION}s" \
+                settings=profile \
+                "jdk.ObjectAllocationInNewTLAB#enabled=true" \
+                "jdk.ObjectAllocationOutsideTLAB#enabled=true" \
+                "jdk.ObjectAllocationSample#enabled=true" \
+                "jdk.GCHeapSummary#enabled=true" \
+                "jdk.GCConfiguration#enabled=true" \
+                "jdk.YoungGenerationConfiguration#enabled=true" \
+                "jdk.OldGenerationConfiguration#enabled=true" \
+                "jdk.GCCollectorG1GC#enabled=true" \
+                "jdk.G1HeapRegionInformation#enabled=true" \
+                filename="$JFR_FILE" 2>/dev/null
+
+            if [ $? -eq 0 ]; then
+                echo -e "${GREEN}JFR memory recording started successfully${NC}"
+                echo "Recording for $MEMORY_DURATION seconds..."
+
+                # Show progress
+                for i in $(seq 1 $((MEMORY_DURATION/10))); do
+                    echo -n "."
+                    sleep 10
+                done
+                echo ""
+
+                # Stop recording
+                jcmd "$PID" JFR.stop name=memory-analysis 2>/dev/null
+                echo -e "${GREEN}Enhanced JFR memory profiling completed: $JFR_FILE${NC}"
+            else
+                echo -e "${YELLOW}jcmd failed, falling back to async-profiler...${NC}"
+                "$PROFILER_DIR/current/bin/asprof" -e alloc -d "$MEMORY_DURATION" -f "$RESULTS_DIR/memory-enhanced-fallback-$TIMESTAMP.html" "$PID"
+            fi
+            ;;
+        15)
+            echo -e "${GREEN}Starting Java 25 CPU-Time Profiling (Experimental)...${NC}"
+            if [ "$java_version" -lt 25 ]; then
+                echo -e "${YELLOW}Warning: This feature requires Java 25+. Current version: $java_version${NC}"
+                echo -e "${BLUE}Falling back to standard CPU profiling...${NC}"
+                "$PROFILER_DIR/current/bin/asprof" -d 60 -f "$RESULTS_DIR/cpu-fallback-$(date +%Y%m%d-%H%M%S).html" "$PID"
+                return
+            fi
+
+            if [[ "$OSTYPE" != "linux"* ]]; then
+                echo -e "${RED}Error: Java 25 CPU-Time profiling is only available on Linux${NC}"
+                echo -e "${BLUE}Falling back to standard CPU profiling...${NC}"
+                "$PROFILER_DIR/current/bin/asprof" -d 60 -f "$RESULTS_DIR/cpu-fallback-$(date +%Y%m%d-%H%M%S).html" "$PID"
+                return
+            fi
+
+            read -p "Enter duration in seconds (default: 60): " CPU_DURATION
+            CPU_DURATION=${CPU_DURATION:-60}
+
+            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+            JFR_FILE="$RESULTS_DIR/cpu-time-java25-$TIMESTAMP.jfr"
+
+            echo -e "${BLUE}Starting Java 25 CPU-Time sampling (includes native code)...${NC}"
+
+            # Use jcmd to enable the experimental CPU-time sampling
+            jcmd "$PID" JFR.start name=cpu-time-analysis duration="${CPU_DURATION}s" \
+                "jdk.CPUTimeSample#enabled=true" \
+                "jdk.ExecutionSample#enabled=true" \
+                "jdk.NativeMethodSample#enabled=true" \
+                "jdk.ThreadCPULoad#enabled=true" \
+                filename="$JFR_FILE" 2>/dev/null
+
+            if [ $? -eq 0 ]; then
+                echo -e "${GREEN}Java 25 CPU-time recording started successfully${NC}"
+                echo "Recording CPU time (including native code) for $CPU_DURATION seconds..."
+
+                # Show progress
+                for i in $(seq 1 $((CPU_DURATION/5))); do
+                    echo -n "."
+                    sleep 5
+                done
+                echo ""
+
+                # Stop recording
+                jcmd "$PID" JFR.stop name=cpu-time-analysis 2>/dev/null
+                echo -e "${GREEN}Java 25 CPU-time profiling completed: $JFR_FILE${NC}"
+                echo -e "${BLUE}This recording includes native code execution time${NC}"
+            else
+                echo -e "${YELLOW}Java 25 CPU-time profiling failed, falling back to async-profiler...${NC}"
+                "$PROFILER_DIR/current/bin/asprof" -d "$CPU_DURATION" -f "$RESULTS_DIR/cpu-time-fallback-$TIMESTAMP.html" "$PID"
+            fi
+            ;;
+        16)
+            echo -e "${GREEN}Starting Java 25 Method Tracing...${NC}"
+            if [ "$java_version" -lt 25 ]; then
+                echo -e "${YELLOW}Warning: This feature requires Java 25+. Current version: $java_version${NC}"
+                echo -e "${BLUE}Falling back to standard profiling...${NC}"
+                "$PROFILER_DIR/current/bin/asprof" -d 60 -f "$RESULTS_DIR/method-fallback-$(date +%Y%m%d-%H%M%S).html" "$PID"
+                return
+            fi
+
+            read -p "Enter duration in seconds (default: 30): " METHOD_DURATION
+            METHOD_DURATION=${METHOD_DURATION:-30}
+
+            echo -e "${YELLOW}Enter method pattern to trace (e.g., 'com.example.*' or '*' for all):${NC}"
+            read -p "Method pattern: " METHOD_PATTERN
+            METHOD_PATTERN=${METHOD_PATTERN:-"*"}
+
+            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+            JFR_FILE="$RESULTS_DIR/method-trace-java25-$TIMESTAMP.jfr"
+
+            echo -e "${BLUE}Starting Java 25 method tracing for pattern: $METHOD_PATTERN${NC}"
+
+            # Use jcmd to enable method tracing events
+            jcmd "$PID" JFR.start name=method-trace-analysis duration="${METHOD_DURATION}s" \
+                "jdk.MethodSample#enabled=true" \
+                "jdk.MethodEntry#enabled=true,threshold=1ms" \
+                "jdk.MethodExit#enabled=true,threshold=1ms" \
+                "jdk.ExecutionSample#enabled=true" \
+                filename="$JFR_FILE" 2>/dev/null
+
+            if [ $? -eq 0 ]; then
+                echo -e "${GREEN}Java 25 method tracing started successfully${NC}"
+                echo "Tracing methods matching '$METHOD_PATTERN' for $METHOD_DURATION seconds..."
+
+                # Show progress
+                for i in $(seq 1 $METHOD_DURATION); do
+                    echo -n "."
+                    sleep 1
+                done
+                echo ""
+
+                # Stop recording
+                jcmd "$PID" JFR.stop name=method-trace-analysis 2>/dev/null
+                echo -e "${GREEN}Java 25 method tracing completed: $JFR_FILE${NC}"
+                echo -e "${BLUE}This recording includes detailed method entry/exit timing${NC}"
+            else
+                echo -e "${YELLOW}Java 25 method tracing failed, falling back to async-profiler...${NC}"
+                "$PROFILER_DIR/current/bin/asprof" -d "$METHOD_DURATION" -f "$RESULTS_DIR/method-trace-fallback-$TIMESTAMP.html" "$PID"
+            fi
+            ;;
+        17)
+            echo -e "${GREEN}Starting Advanced JFR with Custom Events...${NC}"
+
+            read -p "Enter duration in seconds (default: 120): " CUSTOM_DURATION
+            CUSTOM_DURATION=${CUSTOM_DURATION:-120}
+
+            read -p "Enter max recording size (e.g., 100MB, default: 500MB): " MAX_SIZE
+            MAX_SIZE=${MAX_SIZE:-"500MB"}
+
+            read -p "Enter max age for events (e.g., 5m, 1h, default: 10m): " MAX_AGE
+            MAX_AGE=${MAX_AGE:-"10m"}
+
+            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+            JFR_FILE="$RESULTS_DIR/advanced-custom-$TIMESTAMP.jfr"
+
+            echo -e "${BLUE}Starting advanced JFR recording with custom configuration...${NC}"
+            echo -e "${BLUE}Max size: $MAX_SIZE, Max age: $MAX_AGE${NC}"
+
+            # Create comprehensive JFR recording with all available events
+            jcmd "$PID" JFR.start name=advanced-analysis duration="${CUSTOM_DURATION}s" \
+                disk=true maxsize="$MAX_SIZE" maxage="$MAX_AGE" \
+                "jdk.ObjectAllocationInNewTLAB#enabled=true" \
+                "jdk.ObjectAllocationOutsideTLAB#enabled=true" \
+                "jdk.ObjectAllocationSample#enabled=true,throttle=1000/s" \
+                "jdk.GCHeapSummary#enabled=true" \
+                "jdk.GCConfiguration#enabled=true" \
+                "jdk.ExecutionSample#enabled=true" \
+                "jdk.ThreadCPULoad#enabled=true" \
+                "jdk.ThreadContextSwitchRate#enabled=true" \
+                "jdk.JavaMonitorEnter#enabled=true,threshold=10ms" \
+                "jdk.JavaMonitorWait#enabled=true,threshold=10ms" \
+                "jdk.ThreadPark#enabled=true,threshold=10ms" \
+                "jdk.SocketRead#enabled=true,threshold=10ms" \
+                "jdk.SocketWrite#enabled=true,threshold=10ms" \
+                "jdk.FileRead#enabled=true,threshold=10ms" \
+                "jdk.FileWrite#enabled=true,threshold=10ms" \
+                filename="$JFR_FILE" 2>/dev/null
+
+            if [ $? -eq 0 ]; then
+                echo -e "${GREEN}Advanced JFR recording started successfully${NC}"
+                echo "Recording comprehensive events for $CUSTOM_DURATION seconds..."
+
+                # Show progress with more frequent updates
+                for i in $(seq 1 $((CUSTOM_DURATION/5))); do
+                    echo -n "."
+                    sleep 5
+                done
+                echo ""
+
+                # Stop recording
+                jcmd "$PID" JFR.stop name=advanced-analysis 2>/dev/null
+                echo -e "${GREEN}Advanced JFR recording completed: $JFR_FILE${NC}"
+                echo -e "${BLUE}This recording includes I/O, locking, GC, and allocation events${NC}"
+            else
+                echo -e "${YELLOW}Advanced JFR recording failed, falling back to async-profiler...${NC}"
+                "$PROFILER_DIR/current/bin/asprof" --all -d "$CUSTOM_DURATION" -o jfr -f "$RESULTS_DIR/advanced-fallback-$TIMESTAMP.jfr" "$PID"
+            fi
+            ;;
+        18)
+            echo -e "${GREEN}Starting JFR Memory Leak Analysis with TLAB tracking...${NC}"
+
+            read -p "Enter duration in minutes (default: 10): " LEAK_DURATION_MIN
+            LEAK_DURATION_MIN=${LEAK_DURATION_MIN:-10}
+            LEAK_DURATION=$((LEAK_DURATION_MIN * 60))
+
+            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+            JFR_FILE="$RESULTS_DIR/memory-leak-tlab-$TIMESTAMP.jfr"
+
+            echo -e "${BLUE}Starting comprehensive memory leak analysis...${NC}"
+            echo -e "${BLUE}Duration: $LEAK_DURATION_MIN minutes${NC}"
+
+            # Start JFR recording focused on memory leak detection
+            jcmd "$PID" JFR.start name=memory-leak-analysis duration="${LEAK_DURATION}s" \
+                disk=true maxsize="1GB" maxage="30m" \
+                "jdk.ObjectAllocationInNewTLAB#enabled=true,stackTrace=true" \
+                "jdk.ObjectAllocationOutsideTLAB#enabled=true,stackTrace=true" \
+                "jdk.ObjectAllocationSample#enabled=true,stackTrace=true" \
+                "jdk.TLABAllocation#enabled=true" \
+                "jdk.TLABWaste#enabled=true" \
+                "jdk.GCHeapSummary#enabled=true,period=10s" \
+                "jdk.GCCollectorG1GC#enabled=true" \
+                "jdk.G1HeapRegionInformation#enabled=true" \
+                "jdk.G1HeapRegionTypeChange#enabled=true" \
+                "jdk.OldObjectSample#enabled=true,cutoff=0ms" \
+                "jdk.ClassLoaderStatistics#enabled=true,period=30s" \
+                filename="$JFR_FILE" 2>/dev/null
+
+            if [ $? -eq 0 ]; then
+                echo -e "${GREEN}Memory leak analysis recording started successfully${NC}"
+                echo "Analyzing memory allocation patterns for $LEAK_DURATION_MIN minutes..."
+                echo -e "${YELLOW}This will track TLAB allocation, object samples, and heap changes${NC}"
+
+                # Show progress with time remaining
+                for i in $(seq 1 $LEAK_DURATION_MIN); do
+                    remaining=$((LEAK_DURATION_MIN - i))
+                    echo -e "\\r${BLUE}Recording... ${remaining} minutes remaining${NC}"
+                    sleep 60
+                done
+                echo ""
+
+                # Stop recording
+                jcmd "$PID" JFR.stop name=memory-leak-analysis 2>/dev/null
+                echo -e "${GREEN}Memory leak analysis completed: $JFR_FILE${NC}"
+                echo -e "${BLUE}This recording includes detailed TLAB and object allocation tracking${NC}"
+                echo -e "${YELLOW}Analyze with JProfiler, VisualVM, or Mission Control for leak detection${NC}"
+            else
+                echo -e "${YELLOW}JFR memory leak recording failed, falling back to async-profiler...${NC}"
+                "$PROFILER_DIR/current/bin/asprof" -e alloc -d "$LEAK_DURATION" --alloc 1m -f "$RESULTS_DIR/memory-leak-fallback-$TIMESTAMP.html" "$PID"
+            fi
+            ;;
+        19)
             echo -e "${GREEN}Collecting Garbage Collection Logs...${NC}"
             read -p "Enter duration in seconds (default: 300): " GC_DURATION
             GC_DURATION=${GC_DURATION:-300}
@@ -1100,60 +1589,9 @@ execute_profiling() {
                 fi
             fi
 
-            # Method 2: Use async-profiler to capture GC events if jcmd failed
+            # Method 2: Use jstat if jcmd failed
             if [ "$GC_SUCCESS" = false ]; then
-                echo -e "${YELLOW}jcmd approach failed, using async-profiler for GC events...${NC}"
-
-                # Use async-profiler to capture GC events
-                "$PROFILER_DIR/current/bin/asprof" -e gc -d "$GC_DURATION" -o text -f "$GC_LOG_FILE" "$PID" 2>/dev/null
-
-                if [ $? -eq 0 ] && [ -s "$GC_LOG_FILE" ]; then
-                    GC_SUCCESS=true
-                    echo -e "${GREEN}GC events captured via async-profiler${NC}"
-                fi
-            fi
-
-            # Method 3: Try to find existing GC logs from the JVM
-            if [ "$GC_SUCCESS" = false ]; then
-                echo -e "${YELLOW}Direct GC logging failed, searching for existing GC logs...${NC}"
-
-                # Try to find GC log files associated with the process
-                PROC_DIR="/proc/$PID"
-                if [ -d "$PROC_DIR" ]; then
-                    # Look for open file descriptors that might be GC logs
-                    GC_LOG_CANDIDATES=$(lsof -p "$PID" 2>/dev/null | grep -E "\\.log|gc" | awk '{print $NF}' | sort -u)
-
-                    if [ ! -z "$GC_LOG_CANDIDATES" ]; then
-                        echo -e "${BLUE}Found potential GC log files:${NC}"
-                        echo "$GC_LOG_CANDIDATES"
-
-                        # Monitor the most recent log file
-                        LATEST_LOG=$(echo "$GC_LOG_CANDIDATES" | head -1)
-                        if [ -f "$LATEST_LOG" ]; then
-                            echo -e "${BLUE}Monitoring existing log: $LATEST_LOG${NC}"
-
-                            # Get current size and tail the log for the specified duration
-                            INITIAL_SIZE=$(wc -l < "$LATEST_LOG" 2>/dev/null || echo "0")
-
-                            # Start monitoring in background and collect for specified duration
-                            timeout "$GC_DURATION" tail -f "$LATEST_LOG" > "$GC_LOG_FILE" 2>/dev/null &
-                            TAIL_PID=$!
-
-                            echo "Monitoring GC log for $GC_DURATION seconds..."
-                            wait $TAIL_PID 2>/dev/null
-
-                            if [ -s "$GC_LOG_FILE" ]; then
-                                GC_SUCCESS=true
-                                echo -e "${GREEN}GC log monitoring completed${NC}"
-                            fi
-                        fi
-                    fi
-                fi
-            fi
-
-            # Method 4: Create a custom GC monitoring script using jstat
-            if [ "$GC_SUCCESS" = false ]; then
-                echo -e "${YELLOW}Falling back to jstat for GC monitoring...${NC}"
+                echo -e "${YELLOW}jcmd approach failed, using jstat for GC monitoring...${NC}"
 
                 if command -v jstat >/dev/null 2>&1; then
                     echo -e "${BLUE}Using jstat to collect GC statistics...${NC}"
@@ -1166,10 +1604,10 @@ execute_profiling() {
                     END_TIME=$(($(date +%s) + GC_DURATION))
 
                     while [ $(date +%s) -lt $END_TIME ]; do
-                        TIMESTAMP=$(date '+%Y-%m-%d %H:%M:%S')
+                        TIMESTAMP_LOG=$(date '+%Y-%m-%d %H:%M:%S')
                         GC_STATS=$(jstat -gc "$PID" 2>/dev/null | tail -1)
                         if [ $? -eq 0 ] && [ ! -z "$GC_STATS" ]; then
-                            echo "$TIMESTAMP,$GC_STATS" >> "$GC_LOG_FILE"
+                            echo "$TIMESTAMP_LOG,$GC_STATS" >> "$GC_LOG_FILE"
                         fi
                         sleep 1
                     done
@@ -1192,83 +1630,342 @@ execute_profiling() {
                 # Show a few sample lines
                 echo -e "${BLUE}Sample log entries (first 5 lines):${NC}"
                 head -5 "$GC_LOG_FILE" 2>/dev/null || echo "  (No content to preview)"
-
-                echo -e "${YELLOW}Analysis suggestions:${NC}"
-                echo "  - Look for frequent GC events indicating memory pressure"
-                echo "  - Check for long GC pause times"
-                echo "  - Monitor heap utilization trends"
-                echo "  - Analyze collection generation patterns"
             else
                 echo -e "${RED}GC log collection failed${NC}"
                 echo -e "${YELLOW}This might happen if:${NC}"
                 echo "  - The JVM doesn't have GC logging enabled"
                 echo "  - Insufficient permissions to access GC logs"
                 echo "  - The Java version doesn't support dynamic GC logging"
-                echo -e "${BLUE}Consider starting your application with GC logging enabled:${NC}"
-                echo "  Java 8: -XX:+PrintGC -XX:+PrintGCDetails -Xloggc:gc.log"
-                echo "  Java 9+: -Xlog:gc*:gc.log"
 
                 # Clean up empty file
                 [ -f "$GC_LOG_FILE" ] && [ ! -s "$GC_LOG_FILE" ] && rm -f "$GC_LOG_FILE"
             fi
             ;;
-        15)
-            echo -e "${GREEN}Starting All Events Profiling for 30 seconds...${NC}"
-            echo -e "${BLUE}This will collect all possible events simultaneously (CPU, alloc, lock, wall)${NC}"
+        20)
+            echo -e "${GREEN}Creating Thread Dump...${NC}"
             TIMESTAMP=$(date +%Y%m%d-%H%M%S)
-            JFR_FILE="$RESULTS_DIR/all-events-$TIMESTAMP.jfr"
-            HTML_FILE="$RESULTS_DIR/all-events-$TIMESTAMP.html"
+            THREAD_DUMP_FILE="$RESULTS_DIR/threaddump-$TIMESTAMP.txt"
 
-            echo -e "${BLUE}Step 1: Recording all events to JFR format...${NC}"
-            "$PROFILER_DIR/current/bin/asprof" --all -d 30 -o jfr -f "$JFR_FILE" "$PID"
+            # Try jstack first (if available), then fall back to async-profiler
+            if command -v jstack >/dev/null 2>&1; then
+                echo -e "${BLUE}Using jstack to generate thread dump...${NC}"
+                jstack "$PID" > "$THREAD_DUMP_FILE" 2>&1
+                JSTACK_EXIT_CODE=$?
 
-            if [ $? -eq 0 ] && [ -f "$JFR_FILE" ]; then
-                echo -e "${BLUE}Step 2: Converting JFR to HTML flame graph...${NC}"
-                # Use the converter tool to create flame graph from JFR
-                if [ -f "$PROFILER_DIR/current/bin/converter.jar" ]; then
-                    java -jar "$PROFILER_DIR/current/bin/converter.jar" jfr2flame "$JFR_FILE" "$HTML_FILE"
-                elif [ -f "$PROFILER_DIR/current/bin/jfrconv" ]; then
-                    bash "$PROFILER_DIR/current/bin/jfrconv" -o html "$JFR_FILE" "$HTML_FILE"
+                if [ $JSTACK_EXIT_CODE -eq 0 ] && [ -s "$THREAD_DUMP_FILE" ]; then
+                    echo -e "${GREEN}Thread dump completed: $THREAD_DUMP_FILE${NC}"
                 else
-                    echo -e "${YELLOW}JFR converter not found, skipping HTML conversion${NC}"
-                    echo -e "${BLUE}You can analyze the JFR file with JProfiler, VisualVM, or Mission Control${NC}"
-                fi
-
-                echo -e "${GREEN}All events profiling completed!${NC}"
-                echo -e "${YELLOW}Generated files:${NC}"
-                echo "  - JFR recording: $JFR_FILE"
-                if [ -f "$HTML_FILE" ]; then
-                    echo "  - HTML flame graph: $HTML_FILE"
-                else
-                    echo "  - HTML conversion skipped (use JFR analysis tools instead)"
+                    echo -e "${YELLOW}jstack failed, trying async-profiler...${NC}"
+                    "$PROFILER_DIR/current/bin/asprof" -d 1 -e cpu -o text -f "$THREAD_DUMP_FILE" "$PID" >/dev/null 2>&1
+                    if [ $? -eq 0 ]; then
+                        echo -e "${GREEN}Thread dump completed: $THREAD_DUMP_FILE${NC}"
+                    else
+                        echo -e "${RED}Thread dump failed with both methods${NC}"
+                        rm -f "$THREAD_DUMP_FILE"
+                    fi
                 fi
             else
-                echo -e "${RED}All events profiling failed${NC}"
+                echo -e "${BLUE}jstack not available, using async-profiler...${NC}"
+                # Use async-profiler to get thread information
+                "$PROFILER_DIR/current/bin/asprof" -d 1 -e cpu -o text -f "$THREAD_DUMP_FILE" "$PID" >/dev/null 2>&1
+                if [ $? -eq 0 ]; then
+                    echo -e "${GREEN}Thread dump completed: $THREAD_DUMP_FILE${NC}"
+                else
+                    echo -e "${RED}Thread dump failed${NC}"
+                    rm -f "$THREAD_DUMP_FILE"
+                fi
+            fi
+
+            if [ -f "$THREAD_DUMP_FILE" ]; then
+                echo -e "${YELLOW}Thread dump summary:${NC}"
+                echo "  File: $THREAD_DUMP_FILE"
+                echo "  Size: $(wc -l < "$THREAD_DUMP_FILE") lines"
+                echo -e "${BLUE}Use 'cat $THREAD_DUMP_FILE' to view the complete thread dump${NC}"
             fi
             ;;
-        16)
-            echo -e "${GREEN}Starting OpenTelemetry OTLP Export...${NC}"
-            read -p "Enter duration in seconds (default: 60): " OTLP_DURATION
-            OTLP_DURATION=${OTLP_DURATION:-60}
+        21)
+            echo -e "${YELLOW}Recent profiling results in $RESULTS_DIR:${NC}"
+            echo ""
 
-            if ! [[ "$OTLP_DURATION" =~ ^[0-9]+$ ]] || [ "$OTLP_DURATION" -lt 1 ]; then
-                echo -e "${RED}Invalid duration. Using default 60 seconds.${NC}"
-                OTLP_DURATION=60
+            # Get all result files and create a numbered list
+            ALL_FILES=($(ls -t "$RESULTS_DIR"/*.html "$RESULTS_DIR"/*.jfr "$RESULTS_DIR"/*.txt "$RESULTS_DIR"/*.log "$RESULTS_DIR"/*.json 2>/dev/null || true))
+
+            if [ ${#ALL_FILES[@]} -eq 0 ]; then
+                echo "No profiling files found"
+                return
             fi
 
-            TIMESTAMP=$(date +%Y%m%d-%H%M%S)
-            OTLP_FILE="$RESULTS_DIR/otlp-export-$TIMESTAMP.json"
+            # Show numbered list of files
+            echo -e "${GREEN}Select a file to open/explore:${NC}"
+            echo ""
 
-            echo -e "${BLUE}Generating OTLP format for OpenTelemetry integration...${NC}"
-            "$PROFILER_DIR/current/bin/asprof" -d "$OTLP_DURATION" -o otlp -f "$OTLP_FILE" "$PID"
+            for i in "${!ALL_FILES[@]}"; do
+                file="${ALL_FILES[$i]}"
+                filename=$(basename "$file")
+                filesize=$(ls -lh "$file" | awk '{print $5}')
+                filetime=$(ls -l "$file" | awk '{print $6, $7, $8}')
 
-            if [ $? -eq 0 ]; then
-                echo -e "${GREEN}OTLP export completed: $OTLP_FILE${NC}"
-                echo -e "${YELLOW}This file can be imported into OpenTelemetry-compatible systems${NC}"
-                echo -e "${BLUE}File size: $(wc -c < "$OTLP_FILE" 2>/dev/null || echo "unknown") bytes${NC}"
-            else
-                echo -e "${RED}OTLP export failed${NC}"
+                # Determine file type and icon
+                case "$filename" in
+                    *.html) filetype="🔥 Flame Graph" ;;
+                    *.jfr)  filetype="📊 JFR Recording" ;;
+                    *.txt)  filetype="📋 Thread Dump" ;;
+                    *.log)  filetype="📜 GC Log" ;;
+                    *.json) filetype="🌐 OTLP Export" ;;
+                    *)      filetype="📄 Unknown" ;;
+                esac
+
+                printf "%2d) %s - %s (%s) - %s\n" $((i+1)) "$filetype" "$filename" "$filesize" "$filetime"
+            done
+
+            echo ""
+            echo -e "${BLUE}File type summary:${NC}"
+            HTML_COUNT=$(ls "$RESULTS_DIR"/*.html 2>/dev/null | wc -l | xargs)
+            JFR_COUNT=$(ls "$RESULTS_DIR"/*.jfr 2>/dev/null | wc -l | xargs)
+            TXT_COUNT=$(ls "$RESULTS_DIR"/*.txt 2>/dev/null | wc -l | xargs)
+            LOG_COUNT=$(ls "$RESULTS_DIR"/*.log 2>/dev/null | wc -l | xargs)
+            JSON_COUNT=$(ls "$RESULTS_DIR"/*.json 2>/dev/null | wc -l | xargs)
+
+            echo "  🔥 HTML files (flame graphs): $HTML_COUNT"
+            echo "  📊 JFR files (recordings): $JFR_COUNT"
+            echo "  📋 TXT files (thread dumps): $TXT_COUNT"
+            echo "  📜 LOG files (GC logs): $LOG_COUNT"
+            echo "  🌐 JSON files (OTLP exports): $JSON_COUNT"
+            echo ""
+            echo "0) Return to main menu"
+            echo ""
+
+            # Get user selection
+            while true; do
+                read -p "Select a file to open (0-${#ALL_FILES[@]}): " FILE_SELECTION
+
+                if [[ "$FILE_SELECTION" =~ ^[0-9]+$ ]]; then
+                    if [ "$FILE_SELECTION" -eq 0 ]; then
+                        echo "Returning to main menu..."
+                        return
+                    elif [ "$FILE_SELECTION" -ge 1 ] && [ "$FILE_SELECTION" -le "${#ALL_FILES[@]}" ]; then
+                        SELECTED_FILE="${ALL_FILES[$((FILE_SELECTION-1))]}"
+                        SELECTED_FILENAME=$(basename "$SELECTED_FILE")
+
+                        echo -e "${GREEN}Selected: $SELECTED_FILENAME${NC}"
+                        echo ""
+
+                        # Handle different file types
+                        case "$SELECTED_FILENAME" in
+                            *.html)
+                                echo -e "${BLUE}Opening flame graph in browser...${NC}"
+                                if [[ "$OSTYPE" == "darwin"* ]]; then
+                                    open "$SELECTED_FILE"
+                                elif [[ "$OSTYPE" == "linux"* ]]; then
+                                    if command -v xdg-open >/dev/null 2>&1; then
+                                        xdg-open "$SELECTED_FILE"
+                                    else
+                                        echo -e "${YELLOW}Please open this file manually in a browser: $SELECTED_FILE${NC}"
+                                    fi
+                                else
+                                    echo -e "${YELLOW}Please open this file manually in a browser: $SELECTED_FILE${NC}"
+                                fi
+                                ;;
+                            *.jfr)
+                                echo -e "${BLUE}JFR Recording: $SELECTED_FILENAME${NC}"
+                                echo -e "${YELLOW}File size: $(ls -lh "$SELECTED_FILE" | awk '{print $5}')${NC}"
+                                echo ""
+                                echo -e "${BLUE}You can analyze this JFR file with:${NC}"
+                                echo "  1. JDK Mission Control"
+                                echo "  2. JProfiler"
+                                echo "  3. VisualVM"
+                                echo "  4. Convert to flame graph using jfrconv"
+                                echo ""
+                                echo -e "${YELLOW}Would you like to convert it to a flame graph? (y/N):${NC}"
+                                read -p "" CONVERT_JFR
+                                if [[ "$CONVERT_JFR" =~ ^[Yy]$ ]]; then
+                                    FLAME_FILE="${SELECTED_FILE%.jfr}.html"
+                                    echo -e "${BLUE}Converting JFR to flame graph...${NC}"
+                                    if [ -f "$PROFILER_DIR/current/bin/jfrconv" ]; then
+                                        bash "$PROFILER_DIR/current/bin/jfrconv" -o html "$SELECTED_FILE" "$FLAME_FILE" 2>/dev/null
+                                        if [ $? -eq 0 ]; then
+                                            echo -e "${GREEN}Flame graph created: $(basename "$FLAME_FILE")${NC}"
+                                            if [[ "$OSTYPE" == "darwin"* ]]; then
+                                                echo -e "${BLUE}Opening flame graph in browser...${NC}"
+                                                open "$FLAME_FILE"
+                                            fi
+                                        else
+                                            echo -e "${RED}Failed to convert JFR file${NC}"
+                                        fi
+                                    else
+                                        echo -e "${YELLOW}jfrconv not found. JFR file location: $SELECTED_FILE${NC}"
+                                    fi
+                                else
+                                    echo -e "${YELLOW}JFR file location: $SELECTED_FILE${NC}"
+                                fi
+                                ;;
+                            *.txt)
+                                echo -e "${BLUE}Thread Dump: $SELECTED_FILENAME${NC}"
+                                echo -e "${YELLOW}File size: $(ls -lh "$SELECTED_FILE" | awk '{print $5}')${NC}"
+                                echo ""
+                                echo -e "${YELLOW}Would you like to view the thread dump? (y/N):${NC}"
+                                read -p "" VIEW_DUMP
+                                if [[ "$VIEW_DUMP" =~ ^[Yy]$ ]]; then
+                                    echo -e "${BLUE}Thread dump content:${NC}"
+                                    echo "===================="
+                                    cat "$SELECTED_FILE"
+                                    echo "===================="
+                                else
+                                    echo -e "${YELLOW}Thread dump location: $SELECTED_FILE${NC}"
+                                fi
+                                ;;
+                            *.log)
+                                echo -e "${BLUE}GC Log: $SELECTED_FILENAME${NC}"
+                                echo -e "${YELLOW}File size: $(ls -lh "$SELECTED_FILE" | awk '{print $5}')${NC}"
+                                echo ""
+                                echo -e "${YELLOW}Would you like to view the last 50 lines of the GC log? (y/N):${NC}"
+                                read -p "" VIEW_LOG
+                                if [[ "$VIEW_LOG" =~ ^[Yy]$ ]]; then
+                                    echo -e "${BLUE}GC log (last 50 lines):${NC}"
+                                    echo "===================="
+                                    tail -50 "$SELECTED_FILE"
+                                    echo "===================="
+                                else
+                                    echo -e "${YELLOW}GC log location: $SELECTED_FILE${NC}"
+                                fi
+                                ;;
+                            *.json)
+                                echo -e "${BLUE}OTLP Export: $SELECTED_FILENAME${NC}"
+                                echo -e "${YELLOW}File size: $(ls -lh "$SELECTED_FILE" | awk '{print $5}')${NC}"
+                                echo ""
+                                echo -e "${BLUE}This is an OpenTelemetry OTLP export file${NC}"
+                                echo -e "${YELLOW}You can import this into OpenTelemetry-compatible systems${NC}"
+                                echo -e "${YELLOW}File location: $SELECTED_FILE${NC}"
+                                ;;
+                            *)
+                                echo -e "${YELLOW}File location: $SELECTED_FILE${NC}"
+                                ;;
+                        esac
+
+                        echo ""
+                        echo -e "${BLUE}Press Enter to return to file selection...${NC}"
+                        read -p ""
+                        return
+
+                    else
+                        echo -e "${RED}Invalid selection. Please choose a number between 0 and ${#ALL_FILES[@]}.${NC}"
+                    fi
+                else
+                    echo -e "${RED}Invalid input. Please enter a number.${NC}"
+                fi
+            done
+            ;;
+        22)
+            echo -e "${YELLOW}Kill Current Process${NC}"
+            echo "============================="
+            echo -e "${BLUE}Current process being profiled:${NC}"
+            echo "  PID: $PID"
+            if [ ! -z "${PROCESS_NAME:-}" ]; then
+                echo "  Name: $PROCESS_NAME"
             fi
+            echo ""
+
+            # Verify process is still running
+            if ! kill -0 "$PID" 2>/dev/null; then
+                echo -e "${YELLOW}Process $PID is not running or not accessible${NC}"
+                return
+            fi
+
+            # Get process information
+            if command -v ps >/dev/null 2>&1; then
+                PROCESS_INFO=$(ps -p "$PID" -o pid,ppid,user,comm,args 2>/dev/null | tail -1)
+                if [ ! -z "$PROCESS_INFO" ]; then
+                    echo -e "${BLUE}Process details:${NC}"
+                    echo "  $PROCESS_INFO"
+                    echo ""
+                fi
+            fi
+
+            # Warning and confirmation
+            echo -e "${RED}⚠️  WARNING: This will terminate the Java process!${NC}"
+            echo -e "${YELLOW}This action cannot be undone and may cause data loss.${NC}"
+            echo ""
+            echo -e "${BLUE}Kill options:${NC}"
+            echo "  1) Graceful shutdown (SIGTERM) - Recommended"
+            echo "  2) Force kill (SIGKILL) - Use if process is unresponsive"
+            echo "  0) Cancel - Return to main menu"
+            echo ""
+
+            while true; do
+                read -p "Select kill method (0-2): " KILL_METHOD
+
+                case "$KILL_METHOD" in
+                    0)
+                        echo "Kill operation cancelled"
+                        return
+                        ;;
+                    1)
+                        echo -e "${BLUE}Sending SIGTERM to process $PID...${NC}"
+                        if kill -TERM "$PID" 2>/dev/null; then
+                            echo -e "${GREEN}SIGTERM sent successfully${NC}"
+                            echo "Waiting for process to terminate gracefully..."
+
+                            # Wait up to 10 seconds for graceful shutdown
+                            for i in {1..10}; do
+                                if ! kill -0 "$PID" 2>/dev/null; then
+                                    echo -e "${GREEN}Process $PID terminated gracefully${NC}"
+                                    echo ""
+                                    echo -e "${YELLOW}Note: You may need to restart your application to continue profiling${NC}"
+                                    return
+                                fi
+                                echo -n "."
+                                sleep 1
+                            done
+                            echo ""
+
+                            # Process still running after 10 seconds
+                            if kill -0 "$PID" 2>/dev/null; then
+                                echo -e "${YELLOW}Process is still running after 10 seconds${NC}"
+                                echo -e "${BLUE}Would you like to force kill it? (y/N):${NC}"
+                                read -p "" FORCE_KILL
+                                if [[ "$FORCE_KILL" =~ ^[Yy]$ ]]; then
+                                    echo -e "${BLUE}Sending SIGKILL to process $PID...${NC}"
+                                    if kill -KILL "$PID" 2>/dev/null; then
+                                        echo -e "${GREEN}Process $PID force killed${NC}"
+                                    else
+                                        echo -e "${RED}Failed to force kill process $PID${NC}"
+                                        echo "You may need elevated privileges or the process may already be dead"
+                                    fi
+                                else
+                                    echo "Process left running"
+                                fi
+                            fi
+                        else
+                            echo -e "${RED}Failed to send SIGTERM to process $PID${NC}"
+                            echo "You may need elevated privileges or the process may not exist"
+                        fi
+                        return
+                        ;;
+                    2)
+                        echo -e "${RED}⚠️  FORCE KILL WARNING ⚠️${NC}"
+                        echo -e "${YELLOW}This will immediately terminate the process without cleanup!${NC}"
+                        echo -e "${BLUE}Are you sure you want to force kill process $PID? (y/N):${NC}"
+                        read -p "" CONFIRM_FORCE
+                        if [[ "$CONFIRM_FORCE" =~ ^[Yy]$ ]]; then
+                            echo -e "${BLUE}Sending SIGKILL to process $PID...${NC}"
+                            if kill -KILL "$PID" 2>/dev/null; then
+                                echo -e "${GREEN}Process $PID force killed${NC}"
+                                echo ""
+                                echo -e "${YELLOW}Note: You may need to restart your application to continue profiling${NC}"
+                            else
+                                echo -e "${RED}Failed to force kill process $PID${NC}"
+                                echo "You may need elevated privileges or the process may not exist"
+                            fi
+                        else
+                            echo "Force kill cancelled"
+                        fi
+                        return
+                        ;;
+                    *)
+                        echo -e "${RED}Invalid selection. Please choose 0, 1, or 2.${NC}"
+                        ;;
+                esac
+            done
             ;;
         0)
             echo -e "${GREEN}Exiting profiler. Goodbye!${NC}"
@@ -1277,10 +1974,9 @@ execute_profiling() {
         *)
             echo -e "${RED}Invalid option${NC}"
             return
-            ;;
     esac
 
-    if [ $option -ne 9 ] && [ $option -ne 0 ]; then
+    if [ $option -ne 20 ] && [ $option -ne 21 ] && [ $option -ne 22 ] && [ $option -ne 0 ]; then
         echo -e "${GREEN}Profiling completed!${NC}"
         echo -e "${YELLOW}Generated files in $RESULTS_DIR:${NC}"
         ls -lat "$RESULTS_DIR"/*.html "$RESULTS_DIR"/*.jfr "$RESULTS_DIR"/*.txt "$RESULTS_DIR"/*.log "$RESULTS_DIR"/*.json 2>/dev/null | head -5 || echo "No profiling files found"
@@ -1322,7 +2018,7 @@ while true; do
     fi
 
     show_profiling_menu
-    read -p "Select profiling option (0-16): " PROFILE_TYPE
+    read -p "Select profiling option (0-22): " PROFILE_TYPE
     execute_profiling "$PROFILE_TYPE"
 
     echo ""
